--- a/quote-app/package.json
+++ b/quote-app/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "jest-watch-typeahead": "^0.6.5",
