--- a/crwn-clothing/package.json
+++ b/crwn-clothing/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.4",
+    "node-fetch": "^3.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "jest": "^29.0.3"
+    "jest": "^29.0.3",
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
